Header fixo e esconder ScrollBar sem desativar a rolagem

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -9,7 +9,6 @@
   display: flex;
   align-items: center;
   box-shadow: 0px 4px 60px 43px rgba(14, 22, 48, 0.2);
-  position: relative;
   z-index: 2;
 }
 
